@@ -132,6 +132,16 @@
 void weak_function stm32_spiinitialize(void);
 
 /************************************************************************************
+ * Name: stm32_usbinitialize
+ *
+ * Description:
+ *   Called to setup USB-related GPIO pins for the STM3210E-EVAL board.
+ *
+ ************************************************************************************/
+
+void weak_function stm32_usbinitialize(void);
+
+/************************************************************************************
  * Name: stm32_extmemgpios
  *
  * Description:
